--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+      - name: Run docker-compose exec
+    run: |
+      script -q -e -c "docker-compose exec web bash"
+      script -q -e -c "docker-compose exec db psql"
+      
       - name: Checkout
         uses: actions/checkout@main
       - uses: actions/setup-node@v3
