--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y curl jq ca-certificates curl gnupg lsb-release wget
-
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build
         run: bash run.sh
