--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
 
 
       - name: Build
-        run: bash 0.sh
+        run: |
+        bash 1.sh
+        bash 2.sh
 
 
       - name: Artifact
