--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install curl and jq
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl jq ca-certificates curl gnupg lsb-release wget
+          sudo apt-get install -y curl jq ca-certificates gnupg lsb-release wget
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -22,9 +22,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build
-        run: |
-          sudo bash 1.sh
-          sudo bash 2.sh
+        run: sudo bash builder-docker-images.sh
       - name: Artifact
         uses: actions/upload-artifact@v3
         with:
